--- a/CurrencyConverter/CurrencyConverter/Base.lproj/Main.storyboard
+++ b/CurrencyConverter/CurrencyConverter/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="JGw-5L-dsr">
-                                <rect key="frame" x="20" y="135" width="374" height="40"/>
+                                <rect key="frame" x="20" y="135" width="374.5" height="40"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j7i-KF-GKZ">
                                         <rect key="frame" x="0.0" y="0.0" width="111.5" height="40"/>
@@ -33,16 +33,16 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="djr-xn-bbz">
-                                                <rect key="frame" x="0.0" y="6.5" width="111.5" height="33.5"/>
+                                                <rect key="frame" x="0.0" y="18.5" width="111.5" height="21.5"/>
                                                 <subviews>
                                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="from" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O4E-pG-vjE">
-                                                        <rect key="frame" x="0.0" y="0.0" width="82.5" height="33.5"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="73.5" height="21.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.down.app.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="e0e-ZE-1W8">
-                                                        <rect key="frame" x="82.5" y="1" width="29" height="31"/>
+                                                        <rect key="frame" x="73.5" y="1" width="38" height="19"/>
                                                     </imageView>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemOrangeColor"/>
@@ -60,10 +60,10 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cah-d3-wQS">
-                                        <rect key="frame" x="131.5" y="0.0" width="111" height="40"/>
+                                        <rect key="frame" x="131.5" y="0.0" width="111.5" height="40"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hhr-6K-1r5">
-                                                <rect key="frame" x="22" y="4.5" width="67" height="31"/>
+                                                <rect key="frame" x="22.5" y="4.5" width="67" height="31"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain"/>
                                                 <connections>
@@ -71,7 +71,7 @@
                                                 </connections>
                                             </button>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.up.right.and.arrow.down.left.rectangle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="tWJ-YK-J4T">
-                                                <rect key="frame" x="0.0" y="1" width="111" height="37.5"/>
+                                                <rect key="frame" x="0.0" y="1" width="111.5" height="37.5"/>
                                             </imageView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemGray3Color"/>
@@ -87,7 +87,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZfV-HB-Niv">
-                                        <rect key="frame" x="262.5" y="0.0" width="111.5" height="40"/>
+                                        <rect key="frame" x="263" y="0.0" width="111.5" height="40"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cbC-dS-Ldx">
                                                 <rect key="frame" x="0.0" y="0.0" width="111.5" height="40"/>
@@ -95,16 +95,19 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hRf-kz-QVD">
-                                                <rect key="frame" x="0.0" y="8.5" width="111.5" height="31.5"/>
+                                                <rect key="frame" x="0.0" y="18.5" width="111.5" height="21.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K4m-eW-7q2">
-                                                        <rect key="frame" x="0.0" y="0.0" width="56" height="31.5"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="56" height="21.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.down.app.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="qzw-CX-CRc">
-                                                        <rect key="frame" x="56" y="1" width="55.5" height="29"/>
+                                                        <rect key="frame" x="56" y="1" width="55.5" height="19"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="20" id="LYn-pp-32Y"/>
+                                                        </constraints>
                                                     </imageView>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemOrangeColor"/>
@@ -127,15 +130,15 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="WYu-UW-enm">
-                                <rect key="frame" x="20" y="197" width="374" height="50"/>
+                                <rect key="frame" x="20" y="197" width="374.5" height="50"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="1" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KUS-ic-yFj">
-                                        <rect key="frame" x="0.0" y="0.0" width="167" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="167.5" height="50"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="xxxx" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aj3-yO-zih">
-                                        <rect key="frame" x="207" y="0.0" width="167" height="50"/>
+                                        <rect key="frame" x="207.5" y="0.0" width="167" height="50"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
@@ -145,7 +148,7 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sru-Fx-wXk">
-                                <rect key="frame" x="40" y="307" width="334" height="50"/>
+                                <rect key="frame" x="40" y="307" width="334.5" height="50"/>
                                 <color key="backgroundColor" red="0.92156862750000001" green="0.59215686270000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="kAn-Po-cm0"/>
